# fastrag

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.claude/: settings.json
.claude/hooks/: doc-editor-continue.sh
.claude/skills/: ci-watcher.md
.claude/skills/doc-editor/: SKILL.md
.github/workflows/: ci.yml  weekly.yml
benchmarks/: .gitignore  README.md  bench.py  download_fixtures.sh
bundles/vams-lookup-v1/: bundle.json
clients/python/tests/: test_cwe_relation.py  test_get_cve.py  test_get_cwe.py  test_ready.py  test_reload_bundle.py  test_similar.py
crates/fastrag/: Cargo.toml
crates/fastrag-context/: Cargo.toml
crates/fastrag-context/src/: cache.rs  lib.rs  llama.rs
crates/fastrag-context/tests/: cache_resume.rs
crates/fastrag-core/: Cargo.toml
crates/fastrag-core/src/: chunking.rs  document.rs  error.rs  format.rs  language.rs  lib.rs  output.rs
crates/fastrag-csv/: Cargo.toml
crates/fastrag-csv/src/: lib.rs
crates/fastrag-cwe/: Cargo.toml
crates/fastrag-cwe/data/: cwe-tree-v4.19.1.json
crates/fastrag-cwe/src/: data.rs  lib.rs  taxonomy.rs
crates/fastrag-docx/: Cargo.toml
crates/fastrag-docx/src/: lib.rs
crates/fastrag-email/src/: lib.rs
crates/fastrag-embed/: Cargo.toml
crates/fastrag-embed/src/: bge.rs  error.rs  lib.rs  test_utils.rs
crates/fastrag-embed/src/http/: mod.rs  ollama.rs  openai.rs
crates/fastrag-embed/src/llama_cpp/: completion_preset.rs  handle.rs  mod.rs  model_source.rs  pool.rs
crates/fastrag-embed/tests/: http_e2e.rs
crates/fastrag-epub/: Cargo.toml
crates/fastrag-epub/src/: lib.rs
crates/fastrag-eval/: Cargo.toml
crates/fastrag-eval/src/: baseline.rs  buckets.rs  error.rs  gold_set.rs  lib.rs  matrix.rs  matrix_real.rs  runner.rs
crates/fastrag-eval/src/datasets/: nvd.rs  security_queries.json
crates/fastrag-eval/tests/: baseline_diff.rs  gold_set_loader.rs  matrix_stub.rs  union_match.rs
crates/fastrag-eval/tests/fixtures/: baseline_current.json  gold_invalid_dup_id.json  gold_invalid_empty_q.json  gold_invalid_malformed_cve.json  gold_invalid_zero_assertions.json  gold_valid.json  report_bad.json  report_good.json
crates/fastrag-html/: Cargo.toml
crates/fastrag-html/src/: lib.rs
crates/fastrag-index/: Cargo.toml
crates/fastrag-index/src/: entry.rs  error.rs  hash.rs  hnsw.rs  lib.rs  manifest.rs
crates/fastrag-markdown/: Cargo.toml
crates/fastrag-markdown/src/: lib.rs
crates/fastrag-mcp/: Cargo.toml
crates/fastrag-mcp/src/: lib.rs
crates/fastrag-nvd/: Cargo.toml
crates/fastrag-nvd/src/: lib.rs  metadata.rs  parser.rs  schema.rs
crates/fastrag-nvd/tests/: nvd_end_to_end.rs
crates/fastrag-pdf/: Cargo.toml
crates/fastrag-pdf/benches/: pdf_parsing.rs
crates/fastrag-pdf/src/: columns.rs  footnotes.rs  forms.rs  lib.rs
crates/fastrag-pptx/: Cargo.toml
crates/fastrag-pptx/src/: lib.rs
crates/fastrag-rerank/: Cargo.toml
crates/fastrag-rerank/src/: lib.rs
crates/fastrag-rerank/src/llama_cpp/: client.rs  mod.rs
crates/fastrag-rerank/src/onnx/: mod.rs  model_source.rs
crates/fastrag-store/: Cargo.toml
crates/fastrag-store/src/: error.rs  lib.rs  schema.rs  tantivy.rs
crates/fastrag-text/: Cargo.toml
crates/fastrag-text/src/: lib.rs
crates/fastrag-xlsx/: Cargo.toml
crates/fastrag-xlsx/src/: lib.rs
crates/fastrag-xml/: Cargo.toml
crates/fastrag-xml/src/: lib.rs
crates/fastrag/src/: corpus.rs  lib.rs  ops.rs  registry.rs
crates/fastrag/src/corpus/: hybrid.rs  incremental.rs  mod.rs  similar.rs  temporal.rs
crates/fastrag/src/filter/: ast.rs  cwe_rewrite.rs  eval.rs  mod.rs  parser.rs
crates/fastrag/src/hygiene/: boilerplate.rs  mod.rs
crates/fastrag/src/ingest/: engine.rs  jsonl.rs  mod.rs  presets.rs
crates/fastrag/tests/: cwe_expansion.rs  dedup_vams_gold.rs  frontmatter_metadata.rs  hybrid_retrieval.rs  incremental.rs  integration.rs  jsonl_store_e2e.rs  temporal_decay.rs
crates/fastrag/tests/fixtures/dedup/: vams_pairs.jsonl
data/: cwe-v4.19.1.sha256
deploy/: fastrag.service
docker/: Dockerfile.airgap  README.md  entrypoint.sh
docker/ci/: docker-build-size.sh  docker-no-phone-home.sh  docker-smoke.sh
docs/: airgap-install.md  chunking-eval.md  embedder-profile-migration.md  rag-research-2026-04.md  vams-integration.md
docs/eval-baselines/: README.md
docs/profiles/: viper-assist.md
docs/superpowers/: roadmap-2026-04-phase2-rewrite.md
docs/superpowers/plans/: 2026-04-09-llama-cpp-backend.md  2026-04-10-contextual-retrieval.md  2026-04-11-eval-harness.md  (+10 more)
fastrag-cli/: Cargo.toml
fastrag-cli/src/: args.rs  config.rs  context_loader.rs  doctor.rs  embed_loader.rs  eval.rs  eval_matrix.rs  http.rs  lib.rs  main.rs  rerank_loader.rs  test_support.rs
fastrag-cli/tests/: admin_reload_concurrent.rs  admin_reload_e2e.rs  admin_reload_path_escape.rs  admin_reload_rollback.rs  admin_token_e2e.rs  batch_query_e2e.rs  bundle_load.rs  contextual_corpus_e2e.rs  contextual_retry_failed_e2e.rs  cve_lookup_e2e.rs  cwe_lookup_e2e.rs  cwe_relation_e2e.rs  embedder_e2e.rs  embedder_profile_resolution.rs  eval_gold_set_rejects_invalid_e2e.rs  federation_e2e.rs  http_e2e.rs  hybrid_e2e.rs  ingest_e2e.rs  llama_cpp_corpus_e2e.rs  ready_probe_e2e.rs  rerank_llama_cpp_e2e.rs  rerank_onnx_e2e.rs  security_profile_e2e.rs  similar_http_e2e.rs  snippet_e2e.rs  stats_e2e.rs  temporal_decay_e2e.rs  temporal_policy_e2e.rs  temporal_policy_http_e2e.rs  viper_assist_smoke.rs
fastrag-cli/tests/fixtures/viper_assist/: smoke_corpus.jsonl  smoke_queries.json
scripts/: build-bundle.sh  build-dvd-iso.sh  build_taxonomy_corpus.py  chunking-sweep.sh  fetch-cwe.sh  fetch-kev.sh  smoke_viper_assist.sh
scripts/tests/: test_build_taxonomy_corpus.py  test_registry_mirrors.sh
src/fastrag_client/: __init__.py  client.py  errors.py  filters.py
tests/: conftest.py  test_async_client.py  test_client.py  test_errors.py  test_filters.py
tests/fixtures/: sample.csv  sample.docx  sample.epub  sample.html  sample.md  sample.pptx  sample.txt  sample.xlsx  sample.xml
tests/gold/: questions.json
(+22 files in other folders)
