[workspace]
resolver = "2"
members = [
    "crates/fastrag-core",
    "crates/fastrag-pdf",
    "crates/fastrag-html",
    "crates/fastrag-markdown",
    "crates/fastrag-csv",
    "crates/fastrag-text",
    "crates/fastrag-xml",
    "crates/fastrag-xlsx",
    "crates/fastrag-docx",
    "crates/fastrag-pptx",
    "crates/fastrag",
    "crates/fastrag-mcp",
    "fastrag-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crook3dfingers/fastrag"

[workspace.dependencies]
fastrag-core = { path = "crates/fastrag-core", version = "0.1.0" }
fastrag-pdf = { path = "crates/fastrag-pdf", version = "0.1.0" }
fastrag-html = { path = "crates/fastrag-html", version = "0.1.0" }
fastrag-markdown = { path = "crates/fastrag-markdown", version = "0.1.0" }
fastrag-csv = { path = "crates/fastrag-csv", version = "0.1.0" }
fastrag-text = { path = "crates/fastrag-text", version = "0.1.0" }
fastrag-xml = { path = "crates/fastrag-xml", version = "0.1.0" }
fastrag-xlsx = { path = "crates/fastrag-xlsx", version = "0.1.0" }
fastrag-docx = { path = "crates/fastrag-docx", version = "0.1.0" }
fastrag-pptx = { path = "crates/fastrag-pptx", version = "0.1.0" }
fastrag = { path = "crates/fastrag", version = "0.1.0" }
fastrag-mcp = { path = "crates/fastrag-mcp", version = "0.1.0" }
rayon = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
