[workspace]
resolver = "2"
members = [
    "crates/fastrag-core",
    "crates/fastrag-pdf",
    "crates/fastrag-html",
    "crates/fastrag-markdown",
    "crates/fastrag-csv",
    "crates/fastrag-text",
    "crates/fastrag-xml",
    "crates/fastrag-xlsx",
    "crates/fastrag-docx",
    "crates/fastrag-pptx",
    "crates/fastrag-epub",
    "crates/fastrag-rtf",
    "crates/fastrag-email",
    "crates/fastrag-embed",
    "crates/fastrag-index",
    "crates/fastrag-eval",
    "crates/fastrag-rerank",
    "crates/fastrag-context",
    "crates/fastrag-tantivy",
    "crates/fastrag",
    "crates/fastrag-mcp",
    "fastrag-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crook3dfingers/fastrag"

[workspace.dependencies]
fastrag-core = { path = "crates/fastrag-core", version = "0.1.0" }
fastrag-pdf = { path = "crates/fastrag-pdf", version = "0.1.0" }
fastrag-html = { path = "crates/fastrag-html", version = "0.1.0" }
fastrag-markdown = { path = "crates/fastrag-markdown", version = "0.1.0" }
fastrag-csv = { path = "crates/fastrag-csv", version = "0.1.0" }
fastrag-text = { path = "crates/fastrag-text", version = "0.1.0" }
fastrag-xml = { path = "crates/fastrag-xml", version = "0.1.0" }
fastrag-xlsx = { path = "crates/fastrag-xlsx", version = "0.1.0" }
fastrag-docx = { path = "crates/fastrag-docx", version = "0.1.0" }
fastrag-pptx = { path = "crates/fastrag-pptx", version = "0.1.0" }
fastrag-epub = { path = "crates/fastrag-epub", version = "0.1.0" }
fastrag-rtf = { path = "crates/fastrag-rtf", version = "0.1.0" }
fastrag-email = { path = "crates/fastrag-email", version = "0.1.0" }
fastrag = { path = "crates/fastrag", version = "0.1.0" }
fastrag-embed = { path = "crates/fastrag-embed", version = "0.1.0" }
fastrag-index = { path = "crates/fastrag-index", version = "0.1.0" }
fastrag-eval = { path = "crates/fastrag-eval", version = "0.1.0" }
fastrag-rerank = { path = "crates/fastrag-rerank", version = "0.1.0" }
fastrag-context = { path = "crates/fastrag-context", version = "0.1.0" }
fastrag-mcp = { path = "crates/fastrag-mcp", version = "0.1.0" }
fastrag-tantivy = { path = "crates/fastrag-tantivy", version = "0.1.0" }
tantivy = "0.22"
rayon = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
dirs = "6"
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
instant-distance = { version = "0.6.1", features = ["with-serde"] }
tokenizers = "0.22.2"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
axum = "0.7"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
memory-stats = { version = "1.2.0", features = ["serde"] }
hdrhistogram = "7.5.4"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "copy-dylibs", "tls-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1.5"
regex = "1"

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
