[package]
name = "fastrag-cli"
description = "CLI for FastRAG document parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fastrag"
path = "src/main.rs"

[dependencies]
fastrag.workspace = true
fastrag-mcp = { workspace = true, optional = true }
fastrag-embed = { workspace = true, optional = true }
fastrag-eval = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
serde_json = "1"
serde.workspace = true
thiserror.workspace = true
axum = { workspace = true, optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
subtle = "2"

[features]
default = ["language-detection", "mcp", "retrieval"]
language-detection = ["fastrag/language-detection"]
mcp = ["dep:fastrag-mcp"]
retrieval = ["fastrag/retrieval", "dep:fastrag-embed", "dep:axum"]
eval = ["dep:fastrag-eval", "dep:fastrag-embed", "fastrag-embed/test-utils"]

[dev-dependencies]
serde_json = "1"
reqwest.workspace = true
tempfile = "3"
fastrag-embed = { workspace = true, features = ["test-utils"] }
prometheus-parse = "0.2"
