[package]
name = "fastrag-cli"
description = "CLI for FastRAG document parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fastrag"
path = "src/main.rs"

[dependencies]
fastrag.workspace = true
fastrag-mcp = { workspace = true, optional = true }
fastrag-embed = { workspace = true, optional = true }
fastrag-rerank = { workspace = true, optional = true }
fastrag-eval = { workspace = true, optional = true }
fastrag-context = { workspace = true, optional = true }
fastrag-store = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
serde_json = "1"
serde.workspace = true
tempfile = "3"
thiserror.workspace = true
axum = { workspace = true, optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
subtle = "2"
arc-swap = "1.7"
dirs.workspace = true
humantime = { workspace = true }
chrono.workspace = true

[features]
default = ["language-detection", "mcp", "retrieval", "rerank", "store"]
language-detection = ["fastrag/language-detection"]
mcp = ["dep:fastrag-mcp"]
retrieval = [
    "fastrag/retrieval",
    "fastrag/legacy-candle",
    "dep:fastrag-embed",
    "fastrag-embed/legacy-candle",
    "fastrag-embed/http-embedders",
    "fastrag-embed/llama-cpp",
    "dep:axum",
]
rerank = [
    "retrieval",
    "fastrag/rerank",
    "dep:fastrag-rerank",
    "fastrag-rerank/onnx",
]
rerank-llama = [
    "rerank",
    "fastrag-rerank/llama-cpp",
    "fastrag-embed/llama-cpp",
]
contextual = ["retrieval", "fastrag/contextual", "dep:fastrag-context"]
contextual-llama = [
    "contextual",
    "fastrag/contextual-llama",
    "fastrag-context/llama-cpp",
    "fastrag-embed/llama-cpp",
]
eval = ["dep:fastrag-eval", "dep:fastrag-embed", "fastrag-embed/legacy-candle", "fastrag-embed/test-utils"]
store = ["dep:fastrag-store", "fastrag/store"]
nvd = ["fastrag/nvd"]
hygiene = ["fastrag/hygiene"]

[dev-dependencies]
assert_cmd = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
reqwest.workspace = true
wiremock = "0.6"
fastrag-embed = { workspace = true, features = ["test-utils"] }
prometheus-parse = "0.2"
axum-test = "16"
