[package]
name = "fastrag-context"
description = "Contextual Retrieval (Anthropic, 2024): ingest-time chunk context prefixes for FastRAG"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastrag-core.workspace = true
thiserror.workspace = true
blake3.workspace = true
rusqlite.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# llama-cpp completion backend (optional)
fastrag-embed = { workspace = true, optional = true, features = ["llama-cpp"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
serde_json.workspace = true

[features]
default = []
llama-cpp = ["dep:fastrag-embed", "dep:serde", "dep:serde_json"]
test-utils = []
