[package]
name = "fastrag-core"
description = "Core types and traits for FastRAG document parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
whatlang = { version = "0.16", optional = true }

[features]
language-detection = ["dep:whatlang"]
