[package]
name = "fastrag-embed"
description = "CPU embedding inference for FastRAG (BGE-small-en-v1.5)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json = "1"

# Legacy candle BGE backend (optional — enabled by legacy-candle feature)
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
tokenizers = { version = "0.22.2", optional = true }
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"], optional = true }
dirs = { version = "6.0.0", optional = true }

# HTTP embedders (optional)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"

[features]
test-utils = []
http-embedders = ["dep:reqwest"]
llama-cpp = ["http-embedders"]
legacy-candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
    "dep:dirs",
]
