[package]
name = "fastrag-pdf"
description = "PDF parser for FastRAG"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastrag-core.workspace = true
pdf = "0.9"
rayon = { workspace = true, optional = true }

[features]
default = []
parallel = ["rayon"]
