[package]
name = "fastrag-pdf"
description = "PDF parser for FastRAG"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastrag-core.workspace = true
pdf = "0.9"
rayon = { workspace = true, optional = true }
pdfium-render = { version = "0.8", features = ["static"], optional = true }
tesseract = { version = "0.15", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pdf_parsing"
harness = false

[features]
default = []
parallel = ["rayon"]
table-detect = []
images = []
forms = []
footnotes = ["table-detect"]
ocr = ["dep:pdfium-render", "dep:tesseract"]
