[package]
name = "fastrag-store"
description = "JSONL ingest and record storage for FastRAG"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tantivy.workspace = true
fastrag-index.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
