[package]
name = "fastrag"
description = "100x faster document parsing for AI/RAG pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastrag-core.workspace = true
serde.workspace = true
serde_json.workspace = true
fastrag-pdf = { workspace = true, optional = true }
fastrag-html = { workspace = true, optional = true }
fastrag-markdown = { workspace = true, optional = true }
fastrag-csv = { workspace = true, optional = true }
fastrag-text = { workspace = true, optional = true }
fastrag-xml = { workspace = true, optional = true }
fastrag-xlsx = { workspace = true, optional = true }
fastrag-docx = { workspace = true, optional = true }
fastrag-pptx = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["pdf", "html", "markdown", "csv", "text", "xml", "xlsx", "docx", "pptx", "language-detection"]
pdf = ["dep:fastrag-pdf"]
pdf-parallel = ["pdf", "fastrag-pdf/parallel"]
pdf-images = ["pdf", "fastrag-pdf/images"]
pdf-table-detect = ["pdf", "fastrag-pdf/table-detect"]
pdf-ocr = ["pdf", "fastrag-pdf/ocr"]
html = ["dep:fastrag-html"]
markdown = ["dep:fastrag-markdown"]
csv = ["dep:fastrag-csv"]
text = ["dep:fastrag-text"]
xml = ["dep:fastrag-xml"]
xlsx = ["dep:fastrag-xlsx"]
docx = ["dep:fastrag-docx"]
pptx = ["dep:fastrag-pptx"]
language-detection = ["fastrag-core/language-detection"]
