[package]
name = "fastrag"
description = "100x faster document parsing for AI/RAG pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fastrag-core.workspace = true
serde.workspace = true
serde_json.workspace = true
fastrag-pdf = { workspace = true, optional = true }
fastrag-html = { workspace = true, optional = true }
fastrag-markdown = { workspace = true, optional = true }
fastrag-csv = { workspace = true, optional = true }
fastrag-text = { workspace = true, optional = true }
fastrag-xml = { workspace = true, optional = true }
fastrag-xlsx = { workspace = true, optional = true }
fastrag-docx = { workspace = true, optional = true }
fastrag-pptx = { workspace = true, optional = true }
fastrag-epub = { workspace = true, optional = true }
fastrag-rtf = { workspace = true, optional = true }
fastrag-email = { workspace = true, optional = true }
fastrag-embed = { workspace = true, optional = true }
fastrag-index = { workspace = true, optional = true }
fastrag-rerank = { workspace = true, optional = true }
fastrag-context = { workspace = true, optional = true }
fastrag-nvd = { workspace = true, optional = true }
fastrag-store = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
whatlang = { version = "0.16", optional = true }
rayon = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
serde_json = "1"
fastrag-embed = { workspace = true, features = ["test-utils"] }
tempfile = "3"

[features]
default = ["pdf", "html", "markdown", "csv", "text", "xml", "xlsx", "docx", "pptx", "epub", "rtf", "email", "language-detection"]
pdf = ["dep:fastrag-pdf"]
pdf-parallel = ["pdf", "fastrag-pdf/parallel"]
pdf-images = ["pdf", "fastrag-pdf/images"]
pdf-table-detect = ["pdf", "fastrag-pdf/table-detect"]
pdf-forms = ["pdf", "fastrag-pdf/forms"]
pdf-column-detect = ["pdf", "fastrag-pdf/column-detect"]
pdf-footnotes = ["pdf", "fastrag-pdf/footnotes"]
pdf-ocr = ["pdf", "fastrag-pdf/ocr"]
html = ["dep:fastrag-html"]
markdown = ["dep:fastrag-markdown"]
csv = ["dep:fastrag-csv"]
text = ["dep:fastrag-text"]
xml = ["dep:fastrag-xml"]
xlsx = ["dep:fastrag-xlsx"]
docx = ["dep:fastrag-docx"]
pptx = ["dep:fastrag-pptx"]
epub = ["dep:fastrag-epub"]
rtf = ["dep:fastrag-rtf"]
email = ["dep:fastrag-email"]
language-detection = ["fastrag-core/language-detection"]
embedding = ["dep:fastrag-embed"]
legacy-candle = ["embedding", "fastrag-embed/legacy-candle"]
index = ["dep:fastrag-index"]
retrieval = ["embedding", "index", "store", "dep:rayon"]
rerank = ["retrieval", "dep:fastrag-rerank"]
rerank-llama = ["rerank", "fastrag-rerank/llama-cpp"]
contextual = ["retrieval", "dep:fastrag-context", "dep:blake3"]
contextual-llama = ["contextual", "fastrag-context/llama-cpp"]
nvd = ["dep:fastrag-nvd"]
hygiene = ["language-detection", "fastrag-core/language-detection", "dep:regex", "dep:whatlang"]
store = ["dep:fastrag-store", "dep:blake3", "dep:chrono", "dep:fastrag-embed", "dep:fastrag-index"]
